--- a/index.html
+++ b/index.html
@@ -1,112 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>VidGen Prompt Builder</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <script type="importmap">
-      {
-        "imports": {
-          "react": "https://esm.sh/react@18.2.0",
-          "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-          "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-          "lucide-react": "https://esm.sh/lucide-react@0.263.1"
-        }
-      }
-    </script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>VidGen Prompt Builder</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet">
+
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+            mono: ['JetBrains Mono', 'monospace'],
+          },
+          colors: {
+            orange: {
+              50: '#FBE9E7',
+              100: '#FFCCBC',
+              200: '#FFAB91',
+              300: '#FF8A65',
+              400: '#FFA951', // Medium Light
+              500: '#FB8C00', // Primary
+              600: '#F57C00', // Medium
+              700: '#E65100', // Vibrant
+              800: '#BF360C', // Darkest
+              900: '#3E1404',
             },
-            colors: {
-              orange: {
-                50: '#FBE9E7',
-                100: '#FFCCBC',
-                200: '#FFAB91',
-                300: '#FF8A65',
-                400: '#FFA951', // Medium Light
-                500: '#FB8C00', // Primary
-                600: '#F57C00', // Medium
-                700: '#E65100', // Vibrant
-                800: '#BF360C', // Darkest
-                900: '#3E1404',
-              },
-              dark: {
-                bg: '#1A1A1A',
-                card: '#2D2D2D',
-                border: '#3D3D3D',
-                text: '#FFFFFF',
-                subtext: '#B0B0B0'
-              }
-            },
-            animation: {
-              'zoom-in': 'zoomIn 15s infinite alternate ease-in-out',
-              'zoom-out': 'zoomOut 15s infinite alternate ease-in-out',
-              'pan-left': 'panLeft 15s infinite alternate ease-in-out',
-              'pan-right': 'panRight 15s infinite alternate ease-in-out',
-              'handheld': 'handheld 4s infinite ease-in-out',
-              'bob': 'bob 2s infinite ease-in-out',
-              'run': 'bob 0.4s infinite ease-in-out',
-              'pulse-slow': 'pulse 3s infinite',
-            },
-            keyframes: {
-              zoomIn: {
-                '0%': { transform: 'scale(1)' },
-                '100%': { transform: 'scale(1.4)' },
-              },
-              zoomOut: {
-                '0%': { transform: 'scale(1.4)' },
-                '100%': { transform: 'scale(1)' },
-              },
-              panLeft: {
-                '0%': { transform: 'translateX(0)' },
-                '100%': { transform: 'translateX(-15%)' },
-              },
-              panRight: {
-                '0%': { transform: 'translateX(-15%)' },
-                '100%': { transform: 'translateX(0)' },
-              },
-              handheld: {
-                '0%, 100%': { transform: 'translate(0, 0) rotate(0deg)' },
-                '20%': { transform: 'translate(2px, -2px) rotate(0.5deg)' },
-                '40%': { transform: 'translate(-2px, 1px) rotate(-0.5deg)' },
-                '60%': { transform: 'translate(1px, 2px) rotate(0.2deg)' },
-                '80%': { transform: 'translate(-1px, -1px) rotate(-0.2deg)' },
-              },
-              bob: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-5%)' },
-              }
+            dark: {
+              bg: '#1A1A1A',
+              card: '#2D2D2D',
+              border: '#3D3D3D',
+              text: '#FFFFFF',
+              subtext: '#B0B0B0'
             }
           },
+          animation: {
+            'zoom-in': 'zoomIn 15s infinite alternate ease-in-out',
+            'zoom-out': 'zoomOut 15s infinite alternate ease-in-out',
+            'pan-left': 'panLeft 15s infinite alternate ease-in-out',
+            'pan-right': 'panRight 15s infinite alternate ease-in-out',
+            'handheld': 'handheld 4s infinite ease-in-out',
+            'bob': 'bob 2s infinite ease-in-out',
+            'run': 'bob 0.4s infinite ease-in-out',
+            'pulse-slow': 'pulse 3s infinite',
+          },
+          keyframes: {
+            zoomIn: {
+              '0%': { transform: 'scale(1)' },
+              '100%': { transform: 'scale(1.4)' },
+            },
+            zoomOut: {
+              '0%': { transform: 'scale(1.4)' },
+              '100%': { transform: 'scale(1)' },
+            },
+            panLeft: {
+              '0%': { transform: 'translateX(0)' },
+              '100%': { transform: 'translateX(-15%)' },
+            },
+            panRight: {
+              '0%': { transform: 'translateX(-15%)' },
+              '100%': { transform: 'translateX(0)' },
+            },
+            handheld: {
+              '0%, 100%': { transform: 'translate(0, 0) rotate(0deg)' },
+              '20%': { transform: 'translate(2px, -2px) rotate(0.5deg)' },
+              '40%': { transform: 'translate(-2px, 1px) rotate(-0.5deg)' },
+              '60%': { transform: 'translate(1px, 2px) rotate(0.2deg)' },
+              '80%': { transform: 'translate(-1px, -1px) rotate(-0.2deg)' },
+            },
+            bob: {
+              '0%, 100%': { transform: 'translateY(0)' },
+              '50%': { transform: 'translateY(-5%)' },
+            }
+          }
         },
-      }
-    </script>
-    <style>
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
-      /* Hide scrollbar for IE, Edge and Firefox */
-      .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-      }
-      body {
-        background-color: #1A1A1A;
-        color: #FFFFFF;
-        -webkit-tap-highlight-color: transparent;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+      },
+    }
+  </script>
+  <style>
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
+    }
+
+    body {
+      background-color: #1A1A1A;
+      color: #FFFFFF;
+      -webkit-tap-highlight-color: transparent;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
